merge branch 'development'.
Multi-module refactor.

- MFE addition.
- Hot Reload update.
- Project version update. 4.9.SNAPSHOT -> 5.0.0

Co-Authored-By: Brian Melhorado <brgm37@gmail.com>